<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/search_dialog_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/search_dialog_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingEnd="16dp"
                android:background="@android:color/white"
                android:paddingStart="6dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_baseline_close_24" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.example.core.view.MySearchView
            android:id="@+id/search_dialog_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="19dp"/>

        <LinearLayout
            android:id="@+id/search_category_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_background"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/BigText1"
                android:text="@string/category"/>

            <RadioGroup
                android:id="@+id/search_dialog_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/search_category_all">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/search_category_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/search_category_artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artist"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/search_category_artwork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artwork"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/search_category_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/search_category_gene"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gene"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/search_category_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show"/>
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_dialog_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="false"
            app:backgroundTint="@color/red_1"
            android:layout_marginTop="8dp"
            android:text="@string/apply_and_search"
            android:layout_marginHorizontal="16dp"/>
    </LinearLayout>
</ScrollView>